--- a/css/main.css
+++ b/css/main.css
@@ -1240,7 +1240,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #0e542a;
+  background: #d6a2ff;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
