--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -13,6 +13,12 @@ a{
   }
 }
 
+.menu .menu-item a{
+   &:hover{
+    border-bottom: 0px solid #00ffff
+  }
+}
+
 blockquote {
     border-left: 4px solid #3ac057;
 }
